# er-scarecrow-upload

./: .flake8  .fpm  .gitignore  LICENSE  er-scarecrow-upload.code-workspace  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
er_scarecrow_upload/: common.py  fetch.py  fetch_upload.py  upload.py
